--- a/theme/breadcrumbs.html
+++ b/theme/breadcrumbs.html
@@ -12,5 +12,12 @@
       {% endif %}
     </li>
   </ul>
+  <div class="langs">
+    <ul>
+      <li><a href="#" id="tab-cpp">C++</a></li>
+      <li><a href="#" id="tab-js">Javascript</a></li>
+      <li><a href="#" id="tab-lua">Lua</a></li>
+    </ul>
+  </div>
   <hr/>
 </div>
