--- a/theme/base.html
+++ b/theme/base.html
@@ -5,36 +5,44 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   {% block htmltitle %}
-  <title>{{ page_title }}</title>
+  <title>{% if page_title %}{{ page_title }} - {% endif %}{{ site_name }}</title>
   {% endblock %}
+
+  {% if favicon %}<link rel="shortcut icon" href="{{ favicon }}">
+  {% else %}<link rel="shortcut icon" href="{{ base_url }}/img/favicon.ico">{% endif %}
 
   {# CSS #}
   <link href='https://fonts.googleapis.com/css?family=Lato:400,700|Roboto+Slab:400,700|Inconsolata:400,700' rel='stylesheet' type='text/css'>
 
-  <link rel="stylesheet" href="http://cocos2d-x.org/programmersguide/css/theme.css" type="text/css" />
-  <link rel="stylesheet" href="http://cocos2d-x.org/programmersguide/css/theme_extra.css" type="text/css" />
-  <link rel="stylesheet" href="http://cocos2d-x.org/programmersguide/css/highlight.css">
+  <link rel="stylesheet" href="{{ base_url }}/css/theme.css" type="text/css" />
+  <link rel="stylesheet" href="{{ base_url }}/css/theme_extra.css" type="text/css" />
+  <link rel="stylesheet" href="{{ base_url }}/css/highlight.css">
   {%- for path in extra_css %}
   <link href="{{ path }}" rel="stylesheet">
   {%- endfor %}
 
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+  <script src="{{ base_url }}/js/jquery-2.1.1.min.js"></script>
+  <script src="{{ base_url }}/js/modernizr-2.8.3.min.js"></script>
   <script type="text/javascript" src="{{ base_url }}/js/highlight.pack.js"></script>
-  <script src="{{ base_url }}/js/tipuesearch/tipuesearch_content.js"></script>
-  <script src="{{ base_url }}/js/tipuesearch/tipuesearch.js"></script>
-  <script src="{{ base_url }}/js/tipuesearch/tipuesearch_set.js"></script>
   <script src="{{ base_url }}/js/theme.js"></script>
+
+  {%- block extrahead %} {% endblock %}
+
   {%- for path in extra_javascript %}
   <script src="{{ path }}"></script>
   {%- endfor %}
 
-  <style>
-    body {font-size: 90%;}
-    pre, code {font-size: 100%;}
-    h3, h4, h5, h6 {color: #2980b9; font-weight: 300}
-  </style>
-  {%- block extrahead %} {% endblock %}
+  {% if google_analytics %}
+  <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', '{{ google_analytics[0] }}', '{{ google_analytics[1] }}');
+      ga('send', 'pageview');
+  </script>
+  {% endif %}
 </head>
 
 <body class="wy-body-for-nav" role="document">
@@ -43,27 +51,20 @@
 
     {# SIDE NAV, TOGGLES ON MOBILE #}
     <nav data-toggle="wy-nav-shift" class="wy-nav-side stickynav">
-        <div style="background-color: #2980B9;color:#fff">
-          <a href="http://cocos2d-x.org" style="color:#fff;"><img style="vertical-align:-8px;margin:5px;" src="http://cocos2d-x.org/programmersguide/img/logo.png" bordborder="0" />Cocos2d-x</a> - {{ site_name }}
-        </div>
       <div class="wy-side-nav-search">
-
-    <!--<nav data-toggle="wy-nav-shift" class="wy-nav-side stickynav">-->
-    <!--<div class="wy-side-nav-search">-->
-        <!--<a href="{{ homepage_url }}" class="icon icon-home">-->
-        <!--<a href="{{ homepage_url }}">-->
-        <!--<img src="img/logo.png" border="0" />-->
-        <!--</a>-->
-        <!--{{ site_name }}-->
+        <a href="{{ homepage_url }}" class="icon icon-home"> {{ site_name }}</a>
         {% include "searchbox.html" %}
       </div>
 
       <div class="wy-menu wy-menu-vertical" data-spy="affix" role="navigation" aria-label="main navigation">
-      {% include "toc.html" %}
+        <ul class="current">
+          {% for nav_item in nav %}
+            <li>{% include "toc.html" %}<li>
+          {% endfor %}
+        </ul>
       </div>
       &nbsp;
     </nav>
-
 
     <section data-toggle="wy-nav-shift" class="wy-nav-content-wrap">
 
@@ -109,5 +110,12 @@
       {% endif %}
     </span>
 </div>
+
 </body>
 </html>
+{% if current_page and current_page.is_homepage %}
+<!--
+MkDocs version : {{ mkdocs_version }}
+Build Date UTC : {{ build_date_utc }}
+-->
+{% endif %}
