--- a/theme/base.html
+++ b/theme/base.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="{{ base_url }}/css/theme.css" type="text/css" />
   <link rel="stylesheet" href="{{ base_url }}/css/theme_extra.css" type="text/css" />
   <link rel="stylesheet" href="{{ base_url }}/css/highlight.css">
+  <link rel="stylesheet" href="http://cocos2d-x.org/programmersguide/css/pg.css">
   {%- for path in extra_css %}
   <link href="{{ path }}" rel="stylesheet">
   {%- endfor %}
@@ -25,6 +26,24 @@
   <script src="{{ base_url }}/js/modernizr-2.8.3.min.js"></script>
   <script type="text/javascript" src="{{ base_url }}/js/highlight.pack.js"></script>
   <script src="{{ base_url }}/js/theme.js"></script>
+
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+  <script>
+  $(function() {
+    var key = "cocos2d-x_pg_lang";
+    var switch_lang = function(l) {
+        $('.langs li a').removeClass('selected');
+        $('#'+l).addClass('selected');
+        $('.tab_content').hide();
+        $('.'+l).show();
+        $.cookie(key, l);
+    }
+    $('.langs li a').click(function() {switch_lang(this.id);return false;});
+    var c = $.cookie(key);
+    if (typeof c == 'undefined') c='tab-cpp';
+    switch_lang(c);
+  });
+  </script>
 
   {%- block extrahead %} {% endblock %}
 
